--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/debt.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/debt.xhtml
@@ -13,7 +13,7 @@
             <span class="done"> Assets </span>
             <span class="active"> Liabilities </span>
             <span> Risk </span>
-            <span > Confirmation </span>
+            <span > Review </span>
         </div>
 
 
