Committed by Sagar for UOB ui issue

--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/funding.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/funding.xhtml
@@ -11,7 +11,7 @@
     <div class="layout-portlets-box open_client_layout" >
         <div class="Container100 Responsive50">
             
-                <h3 class="BigTopic">Opening Your Account</h3>
+                <h3 class="BigTopic">Fund Your Account</h3>
                 
                 <div class="client_acc_select">
 	                <p:selectOneRadio id="radio" value="" >
@@ -24,7 +24,7 @@
                     <p:commandButton id="uobForwardBtn"
                                      value="Back"
                                      styleClass="uob_button"
-                                     actionListener="#{uobpb.investnow}">
+                                     actionListener="#{uobpb.goBack}">
                     </p:commandButton>
 
                 </h:form>                
