--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/editReview.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/editReview.xhtml
@@ -9,7 +9,7 @@
     <ui:define name="content">
         <h:form id="rvForm">
 
-            <div class="layout-portlets-box">
+            <div class="layout-portlets-box edit_review_block">
                 <div class="Container100 ">
                     <div class="ContainerIndent">
                         <p:panel id="rvinputArea" style="border: 0px; background: transparent;">
