--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/userConfirmation.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/userConfirmation.xhtml
@@ -11,7 +11,7 @@
         <div class="Container100 Responsive50">
 
             <!--  <h3 class="BigTopic">User Confirmation</h3> -->
-            <div class="container100 progressbarsag user-confirm-progressbar">
+            <div class="container100 progressbarsag ">
                 <div class="loadPgNm">
                     <span class="done"> Goal </span>
                     <span class="done"> Assets </span>
