--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/cEdit.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/cEdit.xhtml
@@ -20,8 +20,7 @@
 
             <ui:fragment rendered="#{uobpb.pagemanager.page == 0}">
                 <div class="step1 fixedHeightLP" style="">
-                    <ui:include src="/pages/consumer/uob/addon/core
-                    0.xhtml"/>
+                    <ui:include src="/pages/consumer/uob/addon/core0.xhtml"/>
                 </div>
             </ui:fragment>
             <ui:fragment rendered="#{uobpb.pagemanager.page == 1}">
