--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/acc_opening.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/acc_opening.xhtml
@@ -20,100 +20,7 @@
 					<div class="ContainerIndent">
 
 						<p:accordionPanel multiple="true" styleClass="marginZero">
-							<p:tab title="Account Type">
-								<div class="go-bottom">
-									<div class="Container100">
-										<div class="Container70">
-											<div class="Container100">
-												<span class="title_line">Do you have an existing Securities Trading account on UOBKH? </span></div>
-										</div>
-										<div class="Container20 label_opacity">
-											<p:selectOneRadio id="radiotype" value="" >
-												<f:selectItem itemLabel="Yes" itemValue="value1" ></f:selectItem>
-												<f:selectItem itemLabel="No" itemValue="value2" ></f:selectItem>
-											</p:selectOneRadio>
-										</div>
-									</div>
-									<div class="Container100">
-										<div class="Container70">
-											<div class="Container100">
-												<span class="title_line">Is it Individual Account? </span>
-											</div>
-											<div class="Container70 margin-top">
-												<input id="exAccName" name="exAccName" type="text" placeholder="Enter your existing  Securities Trading account number"/>
-												<label for="exAccName">Securities Trading account number</label>
-											</div>
-										</div>
-										<div class="Container20 label_opacity">
-											<p:selectOneRadio id="radiotype1" value="" >
-												<f:selectItem itemLabel="Yes" itemValue="value1" ></f:selectItem>
-												<f:selectItem itemLabel="No" itemValue="value2" ></f:selectItem>
-											</p:selectOneRadio>
-										</div>
-									</div>
-									<div class="Container100 margin-top ">
-										<div class="Container70">
-											<div class="Container100">
-												<span class="title_line">Is it Joint-Alternate Account? </span>
-											</div>
-											<div class="Container70 margin-top">
-												<input id="exAccName" name="exAccName" type="text" placeholder="Enter your existing Joint UOBKH account number"/>
-												<label for="exAccName">Joint UOBKH account number</label>
-											</div>
-										</div>
-										<div class="Container20 label_opacity">
-											<p:selectOneRadio id="radiotype2" value="" >
-												<f:selectItem itemLabel="Yes" itemValue="value1" ></f:selectItem>
-												<f:selectItem itemLabel="No" itemValue="value2" ></f:selectItem>
-											</p:selectOneRadio>
-										</div>
-									</div>
 
-
-
-									<div class="Container100 margin-top">
-										<span class="title_line">What type of account would you like to open?</span>
-									</div>
-
-									<div class="Container100 account_type_block">
-										<p:panel id="uobacctype" styleClass="Container50">
-											<div class="Container80 label_opacity">
-												<label>Individual Account</label>
-											</div>
-											<div class="Container10 textAlign">
-												<p:selectOneRadio id="radio" value="" >
-													<f:selectItem itemLabel="" itemValue="value1" ></f:selectItem>
-
-												</p:selectOneRadio>
-											</div>
-										</p:panel>
-										<p:panel id="uobjointacctype" styleClass="Container50">
-											<div class="Container80 label_opacity">
-												<label>Joint - Alternate Account</label>
-											</div>
-											<div class="Container10 textAlign">
-												<p:selectOneRadio id="radio1" value="" >
-													<f:selectItem itemLabel="" itemValue="value1" ></f:selectItem>
-
-												</p:selectOneRadio>
-											</div>
-										</p:panel>
-									</div>
-
-
-
-
-									<div class="Container100 pre_next_btn">
-										<!-- <div class="Container50 pre_btn">
-                                            <span class="ui-button-icon-center ui-icon ui-c fa fa-edit fa-chevron-left"></span>
-                                        </div> -->
-										<div class="Container50 next_btn">
-											<span class="ui-button-icon-center ui-icon ui-c fa fa-chevron-right"></span>
-										</div>
-
-									</div>
-								</div>
-							</p:tab>
 
 							<p:tab title="Account Holder">
 								<div class="Container100 Responsive100 acc_holder_form">
@@ -451,9 +358,9 @@
 
 								</div>
 								<div class="Container100 pre_next_btn">
-									<div class="Container50 Responsive100 pre_btn">
+									<!--<div class="Container50 Responsive100 pre_btn">
 										<span class="ui-button-icon-center ui-icon ui-c fa fa-edit fa-chevron-left"></span>
-									</div>
+									</div>-->
 									<div class="Container50 Responsive100 next_btn">
 										<span class="ui-button-icon-center ui-icon ui-c fa fa-chevron-right"></span>
 									</div>
@@ -509,17 +416,7 @@
 															</p:selectOneRadio>
 														</div>
 													</div>
-													<div class="Container100 Responsive100 radio_label ">
-														<div class="Container40 ">
-															<span class="title_line">Mailing Address is different from Residential Address.</span>
-														</div>
-														<div class="Container40 radio_label">
-															<p:selectOneRadio id="radio2" value="" >
-																<f:selectItem itemLabel="Yes" itemValue="value1" ></f:selectItem>
-																<f:selectItem itemLabel="No" itemValue="value1" ></f:selectItem>
-															</p:selectOneRadio>
-														</div>
-													</div>
+
 
 
 												</div>
